--- a/learnVelocity/src/main/webapp/WEB-INF/velocity.properties
+++ b/learnVelocity/src/main/webapp/WEB-INF/velocity.properties
@@ -4,7 +4,7 @@ output.encoding=UTF-8
 resource.loader=webapp
 webapp.resource.loader.cache=false
 ## 布局文件夹位置
-tools.view.servlet.layout.directory = /templates
+tools.view.servlet.layout.directory = /templates/
 ## 定义默认布局文件
 tools.view.servlet.layout.default.template = layout.vm
 ## 错误模板文件
